# Computer-vision

./: .gitignore  EARLY_FIRE_DATASETS.md  Makefile  QUICKSTART.md  README.md  REMOTE_SETUP.md  pyproject.toml
configs/: datasets.yaml
examples/: sample_predictions.csv
scripts/: build_yolo_dataset.py  check_manifest.py  compare_runs.py  demo.py  doctor.py  evaluate_detector_presence.py  extract_video_frames.py  infer_images.py  infer_video.py  inspect_dataset.py  list_datasets.py  prepare_dfire.py  prepare_figlib.py  prepare_firesentry.py  prepare_smokebench.py  prepare_yolo_dataset.py  setup_env.sh  split_manifest.py  train_classifier.py  train_detector.py  train_segmenter.py  train_temporal.py  tune_thresholds.py  visualize_metrics.py
src/firevision/: __init__.py  alerts.py  data.py  device.py  evaluate.py  manifest.py  metrics.py  models.py  splits.py  train.py  yolo.py
tests/: test_alerts.py  test_device.py  test_metrics.py  test_prepare_dfire.py  test_splits.py  test_temporal_labels.py  test_yolo_adapter.py
