[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firevision-bench"
version = "0.1.0"
description = "Reproducible fire and smoke computer-vision benchmarks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10",
  "PyYAML>=6",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
  "torchvision>=0.17",
  "opencv-python>=4.9",
  "tqdm>=4.66",
]
detection = ["ultralytics>=8.3"]
segmentation = ["segmentation-models-pytorch>=0.3.3"]
visualization = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=6",
  "gradio>=5",
]
dev = ["pytest>=8", "ruff>=0.5"]
all = [
  "torch>=2.2",
  "torchvision>=0.17",
  "opencv-python>=4.9",
  "tqdm>=4.66",
  "ultralytics>=8.3",
  "segmentation-models-pytorch>=0.3.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=6",
  "gradio>=5",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
firevision-evaluate = "firevision.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
